2009-10-26  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* vm/build.cmake: gnu-interp.c depends on generated interp.c.

2009-10-20  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* vm/sqUnixMemory.c (uxGrowMemoryBy): Reject request to increase
	memory by ludicrous amounts.

2009-09-27  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* cmake/configure (cflags): Change '--DOPT--src=' to '-DOPT--src='.

2009-09-18  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* plugins/SerialPlugin/sqUnixSerial.c (serialPortCloseByName):
	Invalidate serial port name after closing.

2009-09-18    <piumarta@ubuntu.piumarta.com>

	* cmake/squeak.in: Resolve symlinks in bindir.  Fix missing
	'error' function.

2009-09-17    <piumarta@ubuntu.piumarta.com>

	* cmake/Plugins.cmake: Set ${plugin}_disabled for each plugin,
	recording whether the plugin is to be built.

	* vm/build.cmake: Set useoss according to vm-sound-OSS_disabled.

	* cmake/config.in: Substitute [useoss] when configuring.

	* cmake/squeak.in: Communicate with the VM via environment.  Don't
	attempt to user padsp wrapper unless vm-sound-OSS was built.

	* vm/config.cmake: Configure interp as "gnu-interp" if compiler is
	GCC, otherwise "interp".

	* vm/build.cmake: squeakvm depends on bld/${interp}.c.  Implicitly
	build bld/gnu-interp.c from src/vm/interp.c using gnuify.
	Implicitly build bld/interp.c by copying src/vm/interp.c.

	* cmake/gnuify: Try gnuify.awk with gawk then awk then cp.

	* cmake/gnuify.awk: Copied from old config/gnuify.

	* cmake/configure (svnversion): Quote unix/.svn to permit spaces
	in pathnames.

2009-09-16  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* doc/RELEASE_NOTES_3.11.3.2135: Release 3.11.3.2135.

2009-09-16    <piumarta@ubuntu.piumarta.com>

	* cmake/configure: Read svnversion from unix/svnversion if not
	building from a repo, otherwise generate via svn info and update
	unix/svnversion.
